--- a/public/locales/ar/carRent.json
+++ b/public/locales/ar/carRent.json
@@ -11,7 +11,7 @@
     "duration": "تحديد المدة",
     "terms": "الشروط والأحكام",
     "downPrice": "الدفعة المقدمة",
-    "payment": "الدفع"
+    "payment": "الانهاء"
   },
   "carForm": {
     "firstName": "الاسم الأول",
@@ -63,7 +63,7 @@
     "back": "السابق",
     "next": "التالي",
     "toPayment": "الإنتقال  الى بوابة الدفع",
-    "finish": "العودة إلى الصفحة الرئيسية"
+    "finish": "إرسال الطلب"
   },
   "messages": {
     "success": "تم إرسال النموذج بنجاح!"
