--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -50,5 +50,6 @@
   "choose_file": "اختر ملف",
   "files_selected": "الملفات المختارة",
   "edit": "تعديل",
-  "save": "حفظ"
+  "save": "حفظ",
+  "add_more_files": "اضافة صور اخرى"
 }
