--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -50,5 +50,6 @@
   "choose_file": "Choose file",
   "files_selected": "files selected",
   "edit": "Edit",
-  "save": "Save"
+  "save": "Save",
+  "add_more_files": "Add more files"
 }
