fix image preview

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -51,5 +51,6 @@
   "files_selected": "الملفات المختارة",
   "edit": "تعديل",
   "save": "حفظ",
-  "add_more_files": "اضافة صور اخرى"
+  "add_more_files": "اضافة صور اخرى",
+  "change_file": "تغيير الملف"
 }
