--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -51,5 +51,6 @@
   "files_selected": "files selected",
   "edit": "Edit",
   "save": "Save",
-  "add_more_files": "Add more files"
+  "add_more_files": "Add more files",
+  "change_file": "Change file"
 }
